--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.5",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-formidable": "^1.2.0",
     "firebase-admin": "^12.0.0",
+    "formidable": "^3.5.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "slugify": "^1.6.6"
