--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.14.0",
+    "braintree-web-drop-in-react": "^1.2.1",
     "emailjs": "^4.0.3",
     "firebase": "^10.7.0",
     "helmet": "^7.1.0",
