--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
@@ -17,6 +18,7 @@
     "emailjs": "^4.0.3",
     "firebase": "^10.7.0",
     "helmet": "^7.1.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
